Fix: add missing changelog and compat files

--- a/debian/rules
+++ b/debian/rules
@@ -3,11 +3,12 @@
 	dh $@
 
 override_dh_auto_clean:
+override_dh_auto_configure:
 override_dh_auto_build:
+override_dh_auto_test:
 override_dh_auto_install:
 
 override_dh_install:
 	mkdir -p debian/xssinspector/usr/share/xssinspector
 	mkdir -p debian/xssinspector/usr/bin
-	# Копируем исходники кроме папки debian
 	find . -maxdepth 1 ! -name 'debian' ! -name '.' -exec cp -r {} debian/xssinspector/usr/share/xssinspector/ \;
