--- a/debian/control
+++ b/debian/control
@@ -7,5 +7,5 @@ Standards-Version: 4.5.0
 
 Package: xssinspector
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, python3
 Description: Automated package for xssinspector
