--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,10 @@ override_dh_auto_build:
 override_dh_auto_test:
 override_dh_auto_install:
 
+# ОТКЛЮЧАЕМ проблемные шаги для бинарных файлов
+override_dh_strip:
+override_dh_dwz:
+
 override_dh_install:
 	mkdir -p debian/xssinspector/usr/share/xssinspector
 	mkdir -p debian/xssinspector/usr/bin
